<resources>
    <string name="app_name">GoStyleApp</string>
    <string name="next">SUIVANT</string>
    <string name="skip">PASSER</string>
    <string name="start">DEMARRER</string>

    <string name="slide_1_title">Bienvenue sur GoStyle</string>
    <string name="slide_1_desc">Découvrez les dernières promotions sur pleins d\'articles dans vos magasins.</string>

    <string name="slide_2_title">Promo</string>
    <string name="slide_2_desc">Scannez, récupérer votre code et shoppez!!!</string>
    <string name="bienvenue">Bienvenue sur GoStyle!</string>
    <string name="connectez">Connectez-vous !</string>
    <string name="indication">Inscrivez-vous !</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="description">15% de réductions sur une sélection de t-shirts</string>
    <string name="magasin">GoStyleLille - 9 rue nationale, 59160</string>
    <string name="btn_login">CONNEXION</string>
    <string name="btn_register">INSCRIPTION</string>
    <string name="btn_link_to_register">Pas encore membre ? Inscris-toi.</string>
    <string name="btn_link_to_login">Déjà enregistré? Connecte-toi.</string>
    <string name="compteexistant">Déjà un compte ? Connectez vous !</string>
    <string name="inscrivez">Pas encore de compte ? Inscrivez vous !</string>

    <!-- info -->
    <string name="qrcode_info">Votre promo</string>

</resources>
