<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/textViewBienvenue"
        android:layout_width="274dp"
        android:layout_height="94dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="594dp"
        android:gravity="center"
        android:text="@string/bienvenue"
        android:textColor="@color/dot_dark_screen1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="541dp"
        android:text="@string/connectez"
        android:textColor="@color/dot_dark_screen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="442dp"
        android:text="@string/login"
        android:textColor="@color/dot_dark_screen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="381dp"
        android:background="@color/dot_dark_screen1"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="385dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="308dp"
        android:background="@color/dot_dark_screen1"
        android:hint="Mot de Passe"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="255dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="243dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_login"
        android:textColor="@color/dot_dark_screen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="578dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="134dp"
        android:text="@string/inscrivez"
        android:background="@null"
        android:textAllCaps="false"
        android:textColor="@color/dot_dark_screen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>