<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EF1F1F">

    <TextView
        android:id="@+id/textView"
        android:layout_width="274dp"
        android:layout_height="94dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="588dp"
        android:gravity="center"
        android:text="@string/bienvenue"
        android:textColor="@color/dot_dark_screen1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="545dp"
        android:text="@string/indication"
        android:textColor="@color/dot_dark_screen1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="454dp"
        android:text="@string/Signin"
        android:textColor="@color/dot_dark_screen1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="298dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="395dp"
        android:background="@color/dot_dark_screen1"
        android:hint="Email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="346dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="347dp"
        android:background="@color/dot_dark_screen1"
        android:hint="Nom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="347dp"
        android:background="@color/dot_dark_screen1"
        android:hint="Prenom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="546dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="347dp"
        android:background="@color/dot_dark_screen1"
        android:hint="Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="181dp"
        android:background="@color/colorPrimaryDark"
        android:text="Sign up"
        android:textColor="@color/dot_dark_screen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="583dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="129dp"
        android:text="@string/compteexistant"
        android:textColor="@color/dot_dark_screen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="73dp"
        android:background="@color/colorPrimaryDark"
        android:text="Connectez-vous"
        android:textColor="@color/dot_dark_screen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>